--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,11 @@ dependencies {
     implementation (libs.android.activation) {
         exclude group: 'org.jetbrains.kotlin', module: 'kotlin-stdlib-jdk7'
     }
+    dependencies {
+        implementation 'com.google.android.gms:play-services-location:21.0.1'
+        implementation 'com.sun.mail:android-mail:1.6.7'
+        implementation 'com.sun.mail:android-activation:1.6.7'
+    }
 
     // Testing
     testImplementation libs.junit
