--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,18 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
-plugins {
-alias(libs.plugins.android.application) apply false
+buildscript {
+    repositories {
+        google()
+        mavenCentral()
+    }
+    dependencies {
+        // This is where classpath belongs
+        classpath 'com.android.tools.build:gradle:7.4.2'  // Or newer version
+        classpath 'com.google.gms:google-services:4.3.15' // If using Firebase
+    }
+}
+
+allprojects {
+    repositories {
+        google()
+        mavenCentral()
+    }
 }
